# robots-sim

./: .gitignore  NOTICE  README.md  environment.yml  pyproject.toml
.github/workflows/: pr-and-push.yml  pypi-publish-on-release.yml  test-lint.yml
docs/: INTRODUCTION.md  STEPPED_SIM_ENV.md  STEPPED_SIM_IMPLEMENTATION.md
examples/: libero_example.py  libero_stepped_example.py
scripts/: Dockerfile.gr00t-gpu  create_presentation.py  run_exp_libero_example.sh  run_exp_libero_stepped_example.sh  setup-gr00t-gpu.sh
strands_robots_sim/: __init__.py  sim_env.py  stepped_sim_env.py
strands_robots_sim/envs/: __init__.py  base.py  env_libero.py
strands_robots_sim/policies/: __init__.py
strands_robots_sim/policies/groot/: __init__.py  client.py  data_config.py
strands_robots_sim/tools/: __init__.py  gr00t_inference.py
tests/: test_libero_fast.py  test_libero_mock.py  test_mock.py
